--- a/config.ini
+++ b/config.ini
@@ -1,10 +1,13 @@
 owner = dchase
 clustername = dchase-aks-testing
 rgname = dchase-aks-testing-rg
+nrgname = dchase-aks-testing-nrg
 region = eastus2
 purpose = testing
-version = 1.30
-ngname = dchase-aks-testing-ng
+version = 1.30.0
+ngname = nodepool1
 minsize = 1
 maxsize = 10
-instancetype = t3.large
+instancetype = Standard_B2ls_v2
+# Tier can be free or standard
+tier = free
